# ARC2024-solution

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  EXAMPLES.md  LICENSE  ML_SOLVER_MIGRATION.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  README.md  SYMMETRY_SOLVER_MIGRATION.md  TILING_SOLVER_MIGRATION.md  demo.py  main.ipynb  requirements.txt  setup.py
arc_solver/: DAG_FALLBACK_DEMO.md  DAG_FALLBACK_LOGIC.md  DAG_SOLVER_INTEGRATION.md  __init__.py  cli.py  demo_dag_fallback.ipynb  simple_dag_test.py  (+2 more)
arc_solver/cpp/: CMakeLists.txt  README.md  build.sh  setup.py
arc_solver/cpp/bindings/: bindings.cpp
arc_solver/cpp/dag_solver_temp/include/: solver.hpp
arc_solver/cpp/dag_solver_temp/include/candidate/: candidate.hpp
arc_solver/cpp/dag_solver_temp/include/core/: dag.hpp  state.hpp
arc_solver/cpp/dag_solver_temp/include/piece/: piece.hpp
arc_solver/cpp/dag_solver_temp/include/scoring/: score.hpp
arc_solver/cpp/dag_solver_temp/include/transform/: transform.hpp
arc_solver/cpp/dag_solver_temp/src/: main.cpp  solver.cpp
arc_solver/cpp/dag_solver_temp/src/candidate/: composer.cpp
arc_solver/cpp/dag_solver_temp/src/core/: dag.cpp  state.cpp
arc_solver/cpp/dag_solver_temp/src/piece/: extractor.cpp
arc_solver/cpp/dag_solver_temp/src/scoring/: score.cpp
arc_solver/cpp/dag_solver_temp/src/transform/: lib.cpp
arc_solver/cpp/include/: chess_solver.hpp  dag_solver.hpp  ml_solver.hpp  symmetry_solver.hpp  tiling_solver.hpp
arc_solver/cpp/src/: chess_solver.cpp  dag_solver.cpp  ml_solver.cpp  symmetry_solver.cpp  tiling_solver.cpp
(+39 files in other folders)
